--- a/.github/workflows/webassembly.yml
+++ b/.github/workflows/webassembly.yml
@@ -79,8 +79,8 @@ jobs:
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ env.PROJECT_RELEASE_PATH }}.zip
-        path: ./${{ env.PROJECT_RELEASE_PATH }}.zip
+        name: ${{ env.PROJECT_RELEASE_PATH }}
+        path: ./${{ env.PROJECT_RELEASE_PATH }}
 
     - name: Upload Artifact to Release
       uses: softprops/action-gh-release@v1
