🔧 use em++ instead of emcc

--- a/src/Makefile
+++ b/src/Makefile
@@ -154,6 +154,8 @@ ifeq ($(PLATFORM),PLATFORM_WEB)
 	# WARNING: To compile to HTML5, code must be redesigned
 	# to use emscripten.h and emscripten_set_main_loop()
 	CC = emcc
+	# Use Emscripten C++ compiler for .cpp files and final linking
+	CXX = em++
 endif
 ifeq ($(PLATFORM),PLATFORM_DRM)
 	ifeq ($(USE_RPI_CROSS_COMPILER),TRUE)
