--- a/.github/workflows/webassembly.yml
+++ b/.github/workflows/webassembly.yml
@@ -98,14 +98,23 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' && github.event_name != 'release'
+    if: github.ref == 'refs/heads/main' || github.event_name == 'release'
     env:
       PROJECT_NAME: ${{ github.event.repository.name }}
     steps:
+      - name: Set artifact name
+        run: |
+          if [ "${{ github.event_name }}" == "release" ]; then
+            echo "ARTIFACT_NAME=${{ env.PROJECT_NAME }}_v${{ github.event.release.tag_name }}_wasm" >> $GITHUB_ENV
+          else
+            echo "ARTIFACT_NAME=${{ env.PROJECT_NAME }}_dev_wasm" >> $GITHUB_ENV
+          fi
+        shell: bash
+
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.PROJECT_NAME }}_dev_wasm
+          name: ${{ env.ARTIFACT_NAME }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
